--- a/machinekit-documentation/developing/machinekit-developing.asciidoc
+++ b/machinekit-documentation/developing/machinekit-developing.asciidoc
@@ -1,7 +1,7 @@
 [cols="3*"]
 |===
 |link:developing.asciidoc[Back to Developing]
-|link:../documents-index.asciidoc[Back to the main Documents index]
+|link:../../index.asciidoc[Back to the main Documents index]
 |link:../documentation-matrix.asciidoc[Documentation matrix]
 |===
 == [[packages-developing]]Development packages
@@ -53,6 +53,6 @@ python-pyftpdlib libzmq3-dev ;
 [cols="3*"]
 |===
 |link:developing.asciidoc[Back to Developing]
-|link:../documents-index.asciidoc[Back to the main Documents index]
+|link:../../index.asciidoc[Back to the main Documents index]
 |link:../documentation-matrix.asciidoc[Documentation matrix]
 |===
