--- a/machinekit-documentation/documenting/documenting.asciidoc
+++ b/machinekit-documentation/documenting/documenting.asciidoc
@@ -1,7 +1,7 @@
 [cols="3*"]
 |===
 |link:../index-documenting.asciidoc[Back to the Documenting index]
-|link:../documents-index.asciidoc[Back to the main Documents index]
+|link:../../index.asciidoc[Back to the main Documents index]
 |link:../documentation-matrix.asciidoc[Documentation matrix]
 |===
 
@@ -73,6 +73,6 @@ review your change.
 [cols="3*"]
 |===
 |link:../index-documenting.asciidoc[Back to the Documenting index]
-|link:../documents-index.asciidoc[Back to the main Documents index]
+|link:../../index.asciidoc[Back to the main Documents index]
 |link:../documentation-matrix.asciidoc[Documentation matrix]
 |===
