--- a/machinekit-documentation/developing/developing.asciidoc
+++ b/machinekit-documentation/developing/developing.asciidoc
@@ -1,7 +1,7 @@
 [cols="3*"]
 |===
 |link:../index-developer.asciidoc[Back to the Documenting index]
-|link:../documents-index.asciidoc[Back to the main Documents index]
+|link:../../index.asciidoc[Back to the main Documents index]
 |link:../documentation-matrix.asciidoc[Documentation matrix]
 |===
 
@@ -25,6 +25,6 @@ starting at point 1 should lead you thru the next steps and return you to this p
 [cols="3*"]
 |===
 |link:../index-developer.asciidoc[Back to the Documenting index]
-|link:../documents-index.asciidoc[Back to the main Documents index]
+|link:../../index.asciidoc[Back to the main Documents index]
 |link:../documentation-matrix.asciidoc[Documentation matrix]
 |===
