--- a/machinekit-documentation/index-HAL.asciidoc
+++ b/machinekit-documentation/index-HAL.asciidoc
@@ -1,7 +1,7 @@
 [cols="3*"]
 |===
 |
-|link:documents-index.asciidoc[Back to the main Documents index]
+|link:../index.asciidoc[Back to the main Documents index]
 |
 |===
 
@@ -9,33 +9,37 @@
 
 :leveloffset: 1
 
-link:../src/hal/intro.asciidoc[]
+link:../src/hal/intro.asciidoc[HAL Intro]
 
-link:../src/hal/tutorial.asciidoc[]
+link:../src/hal/basic_hal.asciidoc[Basic HAL]
 
-link:../src/hal/general_ref.asciidoc[]
+link:../src/hal/tutorial.asciidoc[HAL Tutorial]
 
-link:../src/hal/canonical-devices.asciidoc[]
+link:../src/hal/hal-examples.asciidoc[HAL examples]
 
-link:../src/hal/tools.asciidoc[]
+link:../src/hal/general_ref.asciidoc[HAL General reference]
 
-link:../src/hal/basic_hal.asciidoc[]
+link:../src/hal/parallel_port.asciidoc[Parallel Port]
 
-link:../src/hal/halshow.asciidoc[]
+link:../src/hal/components.asciidoc[HAL Components]
 
-link:../src/hal/components.asciidoc[]
+link:../src/hal/rtcomps.asciidoc[rtcomps]
 
-link:../src/hal/rtcomps.asciidoc[]
+link:../src/hal/halmodule.asciidoc[halmodule]
 
-link:../src/hal/parallel_port.asciidoc[]
+link:../src/hal/canonical-devices.asciidoc[Canonical Services]
 
-link:../src/hal/hal-examples.asciidoc[]
+link:../src/hal/tools.asciidoc[Tools]
 
-link:../src/hal/instcomp.asciidoc[]
+link:../src/hal/halshow.asciidoc[Halshow]
 
-link:../src/hal/comp.asciidoc[]
+=== Developing
 
-link:../src/hal/halmodule.asciidoc[]
+link:developing/writing-components.asciidoc[Writing HAL Components]
+
+link:../src/hal/instcomp.asciidoc[instcomp]
+
+link:../src/hal/comp.asciidoc[comp]
 
 :leveloffset: 0
 
@@ -43,35 +47,29 @@ link:../src/hal/halmodule.asciidoc[]
 
 :leveloffset: 1
 
-link:../src/drivers/AX5214H.asciidoc[]
+link:../src/drivers/AX5214H.asciidoc[AX5214H]
 
-link:../src/drivers/GS2.asciidoc[]
+link:../src/drivers/GS2.asciidoc[GS2]
 
-link:../src/drivers/VFS11.asciidoc[]
+link:../src/drivers/VFS11.asciidoc[VFS11]
 
-link:../src/drivers/hostmot2.asciidoc[]
+link:../src/drivers/hostmot2.asciidoc[hostmot2]
 
-link:../src/drivers/motenc.asciidoc[]
+link:../src/drivers/motenc.asciidoc[motenc]
 
-link:../src/drivers/opto22.asciidoc[]
+link:../src/drivers/opto22.asciidoc[opto22]
 
-link:../src/drivers/pico_ppmc.asciidoc[]
+link:../src/drivers/pico_ppmc.asciidoc[pico_ppmc]
 
-link:../src/drivers/pluto_p.asciidoc[]
+link:../src/drivers/pluto_p.asciidoc[pluto_p]
 
-link:../src/drivers/servo_to_go.asciidoc[]
+link:../src/drivers/servo_to_go.asciidoc[servo_to_go]
 
-link:../src/drivers/GM.asciidoc[]
-
-link:../src/common/GPLD_Copyright.asciidoc[]
-
-= Related topics
-
-link:developing/writing-components.asciidoc[Writing HAL Components]
+link:../src/drivers/GM.asciidoc[GM]
 
 [cols="3*"]
 |===
 |
-|link:documents-index.asciidoc[Back to the main Documents index]
+|link:../index.asciidoc[Back to the main Documents index]
 |
 |===
