--- a/machinekit-documentation/index-documenting.asciidoc
+++ b/machinekit-documentation/index-documenting.asciidoc
@@ -1,7 +1,7 @@
 [cols="3*"]
 |===
 |
-|link:documents-index.asciidoc[Back to the main Documents index]
+|link:../index.asciidoc[Back to the main Documents index]
 |
 |===
 
@@ -47,6 +47,6 @@ _How can i help documenting?_
 [cols="3*"]
 |===
 |
-|link:documents-index.asciidoc[Back to the main Documents index]
+|link:../index.asciidoc[Back to the main Documents index]
 |
 |===
