--- a/machinekit-documentation/index-user.asciidoc
+++ b/machinekit-documentation/index-user.asciidoc
@@ -1,7 +1,7 @@
 [cols="3*"]
 |===
 |
-|link:documents-index.asciidoc[Back to the main Documents index]
+|link:../index.asciidoc[Back to the main Documents index]
 |
 |===
 
@@ -9,15 +9,9 @@
 
 :leveloffset: 1
 
-image::../src/common/images/emc2-intro.*[]
+link:../src/common/user_intro.asciidoc[User Introduction]
 
-link:../src/common/overleaf.asciidoc[]
-
-link:../src/common/userforeword.asciidoc[]
-
-link:../src/common/user_intro.asciidoc[]
-
-link:../src/common/User_Concepts.asciidoc[]
+link:../src/common/User_Concepts.asciidoc[User Concepts]
 
 :leveloffset: 0
 
@@ -25,57 +19,57 @@ link:../src/common/User_Concepts.asciidoc[]
 
 :leveloffset: 1
 
-link:../src/gui/selector.asciidoc[]
+link:../src/gui/selector.asciidoc[Configuration Selector]
 
-link:../src/gui/axis.asciidoc[]
+link:../src/gui/axis.asciidoc[Axis]
 
-link:../src/gui/ngcgui.asciidoc[]
+link:../src/gui/ngcgui.asciidoc[ngcgui]
 
-link:../src/gui/touchy.asciidoc[]
+link:../src/gui/touchy.asciidoc[touchy]
 
-link:../src/gui/tklinuxcnc.asciidoc[]
+link:../src/gui/tklinuxcnc.asciidoc[tklinuxcnc]
 
-link:../src/gui/mini.asciidoc[]
+link:../src/gui/mini.asciidoc[mini]
 
-link:../src/gui/keystick.asciidoc[]
+link:../src/gui/keystick.asciidoc[keystick]
 
 :leveloffset: 0
 
-= Using LinuxCNC
+= Using Machinekit
 
 :leveloffset: 1
 
-link:../src/gcode/machining_center.asciidoc[]
+link:../src/gcode/machining_center.asciidoc[Machining Center]
 
-link:../src/gcode/coordinates.asciidoc[]
+link:../src/gcode/coordinates.asciidoc[Coordinates]
 
-link:../src/gcode/tool_compensation.asciidoc[]
+link:../src/gcode/tool_compensation.asciidoc[Tool Compensation]
 
-link:../src/gcode/overview.asciidoc[]
+link:../src/gcode/overview.asciidoc[Gcode Overview]
 
-link:../src/gcode/gcode.asciidoc[]
+link:../src/gcode/gcode.asciidoc[GCode]
 
-link:../src/gcode/m-code.asciidoc[]
+link:../src/gcode/m-code.asciidoc[M Codes]
 
-link:../src/gcode/o-code.asciidoc[]
+link:../src/gcode/o-code.asciidoc[O codes]
 
-link:../src/gcode/other-code.asciidoc[]
+link:../src/gcode/other-code.asciidoc[Other Codes]
 
-link:../src/examples/gcode.asciidoc[]
+link:../src/examples/gcode.asciidoc[Gcode Examples]
 
-link:../src/lathe/lathe-user.asciidoc[]
+link:../src/lathe/lathe-user.asciidoc[Lathe User]
 
-link:../src/gcode/rs274ngc.asciidoc[]
+link:../src/gcode/rs274ngc.asciidoc[rs474ngc]
 
-link:../src/gui/image-to-gcode.asciidoc[]
+link:../src/gui/image-to-gcode.asciidoc[image2gcode]
 
-link:../src/common/Glossary.asciidoc[]
+link:../src/common/Glossary.asciidoc[Glossary]
 
-link:../src/common/GPLD_Copyright.asciidoc[]
+link:../src/common/GPLD_Copyright.asciidoc[GPLD_Copyright]
 
 [cols="3*"]
 |===
 |
-|link:documents-index.asciidoc[Back to the main Documents index]
+|link:../index.asciidoc[Back to the main Documents index]
 |
 |===
